# meeting-analyzer

./: .env.example  .gitignore  README.md  admin-setup.sh  deploy.sh  manage.sh  run-dev.sh  run-tests.sh
.kiro/specs/meeting-analyzer-specs/: .config.kiro  design.md  requirements.md  tasks.md
agents/definitions/: analysis_agent.yaml  sentiment_agent.yaml  transcript_agent.yaml
agents/instructions/: analysis_agent_v1.md  orchestrator_v1.md  sentiment_agent_v1.md  transcript_agent_v1.md
deploy/: register_agents.py  register_mcp.py
docs/: local-testing.md  local.md  teams-app-registration.md
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  DEPLOYMENT.md  README.md  apps.tf  foundry.tf  main.tf  outputs.tf  providers.tf  teams.tf  terraform.tfvars.example  variables.tf
local_agents/: analysis_agent.py  base.py  dispatcher.py  pyproject.toml  sentiment_agent.py  transcript_agent.py
mcp/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
mcp/app/: dependencies.py
mcp/app/api/: mcp_protocol.py
mcp/app/api/v1/: router.py
mcp/app/api/v1/tools/: __init__.py  analysis.py  consent.py  meeting.py  poll.py  realtime.py  similarity.py  transcript.py
mcp/app/common/: exceptions.py  logger.py  meeting_id.py
mcp/app/config/: settings.py
mcp/app/services/: similarity.py
mcp/app/services/backends/: __init__.py  base.py  cards.py  graph.py  mock.py
mcp/tests/: __init__.py  conftest.py  test_analysis_tools.py  test_consent_tools.py  test_error_contract.py  test_meeting_tools.py  test_similarity_tools.py  test_stage_gating.py  test_transcript_tools.py
orchestrator/: README.md  config.py  config_scaler.py  foundry_client.py  mcp_client.py  meeting_initiator.py  orchestrator.py  post_meeting_analyzer.py  pyproject.toml  real_time_loop.py  report_builder.py  requirements.txt
orchestrator/tests/: conftest.py  test_mcp_client.py  test_meeting_initiator.py  test_orchestrator.py  test_post_meeting_analyzer.py  test_real_time_loop.py  test_report_builder.py
postman/: Meeting Analyzer - Demo.postman_collection.json  Meeting Analyzer.postman_collection.json  generate_demo_collection.py
shared_models/: __init__.py  a2a_schemas.py  mcp_client.py  mcp_types.py  meeting_id.py  pyproject.toml
team_bot/: .env.example  Dockerfile  README.md  bot.py  config.py  graph_service.py  main.py  mcp_client.py  orchestrator_factory.py  pyproject.toml  requirements.txt
team_bot/app/api/v1/: router.py  tab.py  teams.py
team_bot/app/common/: logger.py
team_bot/app/config/: settings.py
team_bot/tests/: test_bot.py  test_settings.py
teams/: manifest.json
teams-app/: manifest.json
tests/: conftest.py  test_e2e_mcp_pipeline.py  test_e2e_meeting_lifecycle.py
