[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-orchestrator"
version = "0.1.0"
description = "Meeting lifecycle orchestrator for the Meeting Analyzer system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "azure-ai-projects>=2.0.0",
    "azure-ai-agents>=1.0.0",
    "azure-identity>=1.17.0",
    "meeting-shared-models",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
]

[tool.setuptools.packages.find]
include = ["orchestrator*"]
