[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-shared-models"
version = "0.1.0"
description = "Shared Pydantic schemas for the Meeting Analyzer system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["shared_models*"]
